--- a/project/mainwindow.ui
+++ b/project/mainwindow.ui
@@ -112,6 +112,9 @@ border-radius:8px;</string>
                      <string notr="true">background-color: rgb(255,255,255);
 border-radius:8px;</string>
                     </property>
+                    <property name="echoMode">
+                     <enum>QLineEdit::Password</enum>
+                    </property>
                    </widget>
                   </item>
                  </layout>
