--- a/project/calcdialog.ui
+++ b/project/calcdialog.ui
@@ -332,7 +332,7 @@ color:rgb(255,255,255);</string>
      <string>TOTAL SPENT</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="pushbutton_trans">
     <property name="geometry">
      <rect>
       <x>240</x>
