--- a/project/calcdialog.ui
+++ b/project/calcdialog.ui
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(24, 22, 76)</string>
+   <string notr="true">background-color:rgb(164, 166, 255)</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -91,7 +91,7 @@
       </property>
       <property name="styleSheet">
        <string notr="true">border:0px;
-image: url(:/res/Screenshot 2023-11-02 094331.png);</string>
+image: url(:/res/Screenshot 2023-12-29 215945.png)</string>
       </property>
       <property name="text">
        <string/>
@@ -108,7 +108,7 @@ image: url(:/res/Screenshot 2023-11-02 094331.png);</string>
       </property>
       <property name="styleSheet">
        <string notr="true">border:0px;
-image:url(:/res/Screenshot 2023-11-02 094410.png);</string>
+image:url(:/res/Screenshot 2023-12-29 215519.png)</string>
       </property>
       <property name="text">
        <string/>
@@ -125,7 +125,7 @@ image:url(:/res/Screenshot 2023-11-02 094410.png);</string>
       </property>
       <property name="styleSheet">
        <string notr="true">border:0px;
-image:url(:/res/Screenshot 2023-11-02 094359.png)</string>
+image:url(:/res/Screenshot 2023-12-29 215451.png)</string>
       </property>
       <property name="text">
        <string/>
@@ -142,7 +142,7 @@ image:url(:/res/Screenshot 2023-11-02 094359.png)</string>
       </property>
       <property name="styleSheet">
        <string notr="true">border:0px;
-image:url(:/res/Screenshot 2023-11-02 100223.png);</string>
+image:url(:/res/Screenshot 2023-12-29 215541.png)</string>
       </property>
       <property name="text">
        <string/>
@@ -188,15 +188,15 @@ image:url(:/res/Screenshot 2023-11-02 100223.png);</string>
   <widget class="QFrame" name="frame_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>50</x>
      <y>10</y>
-     <width>621</width>
+     <width>611</width>
      <height>191</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(255, 255, 255);
-color:rgb(30, 30, 83);
+color:rgb(0,0,0);
 border-radius:40px;
 </string>
    </property>
@@ -217,9 +217,9 @@ border-radius:40px;
     </property>
     <property name="styleSheet">
      <string notr="true">border:0px;
-background-color: rgb(40, 29, 93);
+background-color:rgb(164, 166, 255);
 border-radius:60px;
-color:rgb(255,255,255);</string>
+color:rgb(0,0,0);</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -240,15 +240,15 @@ color:rgb(255,255,255);</string>
       <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
-      <string>You Should</string>
+      <string>One should</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>60</x>
        <y>60</y>
-       <width>81</width>
+       <width>31</width>
        <height>20</height>
       </rect>
      </property>
@@ -256,7 +256,23 @@ color:rgb(255,255,255);</string>
       <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
-      <string>Pay/Gain</string>
+      <string>pay</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_mean">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>90</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;</string>
+     </property>
+     <property name="text">
+      <string>0</string>
      </property>
     </widget>
    </widget>
@@ -313,8 +329,8 @@ color:rgb(255,255,255);</string>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 9pt &quot;Segoe UI&quot;;
-color: rgb(255, 255, 255);
-background-color: rgb(30, 21, 79);
+color: rgb(0,0,0);
+background-color:rgb(164, 166, 255);
 BORDER-RADIUS:10PX;</string>
     </property>
     <property name="text">
@@ -363,14 +379,15 @@ BORDER-RADIUS:10PX;</string>
    <widget class="QPushButton" name="pushbutton_g">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>30</y>
-      <width>21</width>
-      <height>24</height>
+      <x>510</x>
+      <y>20</y>
+      <width>31</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(33, 12, 95);</string>
+     <string notr="true">background-color:rgb(164, 166, 255);
+border-radius:14px;</string>
     </property>
     <property name="text">
      <string/>
@@ -392,6 +409,73 @@ BORDER-RADIUS:10PX;</string>
      <string/>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>210</y>
+     <width>161</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+font: 700 12pt &quot;Segoe UI&quot;;</string>
+   </property>
+   <property name="text">
+    <string>choose the member</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_member">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>210</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:rgb(255, 255, 255);
+font: 11pt &quot;Segoe UI&quot;;
+color:rgb(0,0,0);
+</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>210</y>
+     <width>131</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;
+color: rgb(0, 0, 0);</string>
+   </property>
+   <property name="text">
+    <string>should pay /gain</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_pay">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>210</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;
+color:rgb(0, 0, 0)</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
