--- a/project/mainwindow.ui
+++ b/project/mainwindow.ui
@@ -34,8 +34,8 @@
         <item>
          <widget class="QFrame" name="frame">
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(31, 12, 93);
-image: url(:/res/Screenshot 2023-11-01 191807.png);
+           <string notr="true">background-color: rgb(164,166,255);
+image: url(:/res/Screenshot 2023-12-29 215815.png);
 border-radius:50px</string>
           </property>
           <property name="frameShape">
@@ -54,7 +54,8 @@ border-radius:50px</string>
      <widget class="QFrame" name="frame_2">
       <property name="styleSheet">
        <string notr="true">border-radius:35px;
-background-color:rgb(17, 14, 94);</string>
+background-color:rgb(164,166,255);
+color:rgb(0,0,0)</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
