--- a/project/profiledialog.ui
+++ b/project/profiledialog.ui
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background:rgb(32, 18, 85);
+   <string notr="true">background-color:rgb(164,166,255);
 color:rgb(48, 55, 63);</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
@@ -62,7 +62,7 @@ color:rgb(48, 55, 63);</string>
        </property>
        <property name="styleSheet">
         <string notr="true">border:0px;
-image:url(:/res/Screenshot 2023-11-02 094331.png)</string>
+image:url(:/res/Screenshot 2023-12-29 215945.png)</string>
        </property>
        <property name="text">
         <string/>
@@ -79,7 +79,7 @@ image:url(:/res/Screenshot 2023-11-02 094331.png)</string>
        </property>
        <property name="styleSheet">
         <string notr="true">border:0px;
-image: url(:/res/Screenshot 2023-11-02 094410.png);</string>
+image: url(:/res/Screenshot 2023-12-29 215519.png)</string>
        </property>
        <property name="text">
         <string/>
@@ -96,7 +96,7 @@ image: url(:/res/Screenshot 2023-11-02 094410.png);</string>
        </property>
        <property name="styleSheet">
         <string notr="true">border:0px;
-image: url(:/res/Screenshot 2023-11-02 094359.png);</string>
+image: url(:/res/Screenshot 2023-12-29 215451.png)</string>
        </property>
        <property name="text">
         <string/>
@@ -161,6 +161,7 @@ image: url(:/res/Screenshot 2023-11-02 094359.png);</string>
         <widget class="QGroupBox" name="groupBox">
          <property name="styleSheet">
           <string notr="true">background-color:rgb(255,255,255);
+color:rgb(0,0,0);
 border-radius:35px;</string>
          </property>
          <property name="title">
@@ -259,8 +260,8 @@ border-radius:35px;</string>
               <property name="styleSheet">
                <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;
 border-radius:10px;
-color:rbg(255,255,255);
-background-color:rgb(40, 34, 79)</string>
+color:rbg(0,0,0);
+background-color:rgb(164,166,255);</string>
               </property>
               <property name="text">
                <string>My Profile</string>
@@ -292,7 +293,7 @@ background-color:rgb(40, 34, 79)</string>
         <widget class="QFrame" name="frame_5">
          <property name="styleSheet">
           <string notr="true">border:0px;
-image:url(:/res/Screenshot 2023-11-02 100223.png);</string>
+image: url(:/res/Screenshot 2023-12-29 215541.png);</string>
          </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
